--- a/grapghqlbackend/package.json
+++ b/grapghqlbackend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^3.4.0",
     "graphql": "^15.6.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "uuid": "^8.3.2"
   }
 }
